--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "angular-chartist.js": "^3.3.12",
     "express": "~3.x",
     "express-session": "^1.13.0",
-	"request": "latest"
+	  "request": "latest",
+    "socket.io": "latest"
   },
   "scripts": {
     "start": "node server.js"
